y.output
State 19 conflicts: 4 shift/reduce
State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: MainClass ClassDeclList

    2 Expression: Expression PLUS Expression
    3           | Expression MINUS Expression
    4           | Expression D_AMPERSAND Expression
    5           | Expression D_LINES Expression
    6           | Expression SMALL_EQUAL Expression
    7           | Expression LARGE_EQUAL Expression
    8           | Expression D_EQUAL Expression
    9           | Expression EXC_EQUAL Expression
   10           | Expression STAR Expression
   11           | Expression SLASH Expression
   12           | Expression LESS Expression
   13           | Expression GREATER Expression
   14           | EXC Expression
   15           | PLUS Expression
   16           | MINUS Expression
   17           | K_TRUE
   18           | K_FALSE
   19           | MethodCall
   20           | LeftValue
   21           | LeftValue DOT K_LENGTH
   22           | K_NEW ID LEFT_PAR RIGHT_PAR
   23           | K_NEW Type Index
   24           | LEFT_PAR Expression RIGHT_PAR
   25           | STRING_LITERAL
   26           | INTEGER_LITERAL
   27           | K_PARSEINT LEFT_PAR Expression RIGHT_PAR

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

   29 ClassDeclList: ClassDeclList ClassDecl
   30              | %empty

   31 ClassDecl: K_CLASS ID Opt_Inheritance LEFT_BRACE VarDeclList MethodDeclList RIGHT_BRACE

   32 VarDeclList: VarDeclList VarDecl
   33            | %empty

   34 MethodDeclList: MethodDeclList MethodDecl
   35               | MethodDeclList MethodDeclWithPublic
   36               | %empty

   37 MethodDecl: Type ID LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE

   38 MethodDeclWithPublic: K_PUBLIC Type ID LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE

   39 Opt_Inheritance: K_EXTENDS ID
   40                | %empty

   41 VarDecl: Type ID VarDeclTail SEMICOLON
   42        | ID ID VarDeclTail SEMICOLON
   43        | Type ID EQUAL Expression VarDeclTail SEMICOLON
   44        | ID ID EQUAL Expression VarDeclTail SEMICOLON

   45 VarLongerDecl: COMMA ID EQUAL Expression
   46              | COMMA ID

   47 VarDeclTail: VarDeclTail VarLongerDecl
   48            | %empty

   49 Opt_ExpressionList: ExpressionList
   50                   | %empty

   51 ExpressionList: Expression ExpressionTailList

   52 ExpressionTailList: ExpressionTailList ExpressionTail
   53                   | %empty

   54 ExpressionTail: COMMA Expression

   55 Opt_FormalList: FormalList
   56               | %empty

   57 FormalList: Type ID FormalListTailList

   58 FormalListTail: COMMA Type ID

   59 FormalListTailList: FormalListTailList FormalListTail
   60                   | %empty

   61 Type: PrimeType
   62     | Type IndexNoExpr
   63     | ID IndexNoExpr

   64 PrimeType: K_INT
   65          | K_STRING
   66          | K_BOOLEAN

   67 Statement: VarDecl
   68          | LEFT_BRACE StatementList RIGHT_BRACE
   69          | LEFT_BRACE RIGHT_BRACE
   70          | K_IF LEFT_PAR Expression RIGHT_PAR Statement K_ELSE Statement
   71          | K_WHILE LEFT_PAR Expression RIGHT_PAR Statement
   72          | K_PRINTLN LEFT_PAR Expression RIGHT_PAR SEMICOLON
   73          | K_PRINT LEFT_PAR Expression RIGHT_PAR SEMICOLON
   74          | LeftValue EQUAL Expression SEMICOLON
   75          | K_RETURN Expression SEMICOLON
   76          | MethodCall SEMICOLON

   77 StatementList: StatementList Statement
   78              | Statement

   79 MethodCall: LeftValue LEFT_PAR Opt_ExpressionList RIGHT_PAR

   80 Index: LEFT_BRACKET Expression RIGHT_BRACKET
   81      | Index LEFT_BRACKET Expression RIGHT_BRACKET

   82 IndexNoExpr: Index LEFT_BRACKET RIGHT_BRACKET
   83            | LEFT_BRACKET RIGHT_BRACKET

   84 LeftValue: ID
   85          | ID Index
   86          | LeftValue DOT ID
   87          | K_NEW ID LEFT_PAR RIGHT_PAR DOT ID
   88          | K_NEW PrimeType Index
   89          | K_THIS DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING_LITERAL (258) 25
INTEGER_LITERAL (259) 26
ID (260) 22 28 31 37 38 39 41 42 43 44 45 46 57 58 63 84 85 86 87 89
D_AMPERSAND (261) 4
D_LINES (262) 5
SMALL_EQUAL (263) 6
LARGE_EQUAL (264) 7
D_EQUAL (265) 8
EXC_EQUAL (266) 9
PLUS (267) 2 15
MINUS (268) 3 16
STAR (269) 10
SLASH (270) 11
K_CLASS (271) 28 31
K_INT (272) 64
K_STRING (273) 28 65
K_BOOLEAN (274) 66
K_IF (275) 70
K_WHILE (276) 71
K_RETURN (277) 75
K_NEW (278) 22 23 87 88
K_THIS (279) 89
K_TRUE (280) 17
K_FALSE (281) 18
K_PRINTLN (282) 72
K_PRINT (283) 73
K_ELSE (284) 70
K_EXTENDS (285) 39
K_PUBLIC (286) 28 38
K_LENGTH (287) 21
K_STATIC (288) 28
K_VOID (289) 28
K_MAIN (290) 28
LEFT_BRACE (291) 28 31 37 38 68 69
RIGHT_BRACE (292) 28 31 37 38 68 69
LEFT_PAR (293) 22 24 27 28 37 38 70 71 72 73 79 87
RIGHT_PAR (294) 22 24 27 28 37 38 70 71 72 73 79 87
LEFT_BRACKET (295) 28 80 81 82 83
RIGHT_BRACKET (296) 28 80 81 82 83
EQUAL (297) 43 44 45 74
SEMICOLON (298) 41 42 43 44 72 73 74 75 76
COMMA (299) 45 46 54 58
EXC (300) 14
DOT (301) 21 86 87 89
LESS (302) 12
GREATER (303) 13
K_PARSEINT (304) 27


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
Expression (52)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27, on right: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
    24 27 43 44 45 51 54 70 71 72 73 74 75 80 81
MainClass (53)
    on left: 28, on right: 1
ClassDeclList (54)
    on left: 29 30, on right: 1 29
ClassDecl (55)
    on left: 31, on right: 29
VarDeclList (56)
    on left: 32 33, on right: 31 32
MethodDeclList (57)
    on left: 34 35 36, on right: 31 34 35
MethodDecl (58)
    on left: 37, on right: 34
MethodDeclWithPublic (59)
    on left: 38, on right: 35
Opt_Inheritance (60)
    on left: 39 40, on right: 31
VarDecl (61)
    on left: 41 42 43 44, on right: 32 67
VarLongerDecl (62)
    on left: 45 46, on right: 47
VarDeclTail (63)
    on left: 47 48, on right: 41 42 43 44 47
Opt_ExpressionList (64)
    on left: 49 50, on right: 79
ExpressionList (65)
    on left: 51, on right: 49
ExpressionTailList (66)
    on left: 52 53, on right: 51 52
ExpressionTail (67)
    on left: 54, on right: 52
Opt_FormalList (68)
    on left: 55 56, on right: 37 38
FormalList (69)
    on left: 57, on right: 55
FormalListTail (70)
    on left: 58, on right: 59
FormalListTailList (71)
    on left: 59 60, on right: 57 59
Type (72)
    on left: 61 62 63, on right: 23 37 38 41 43 57 58 62
PrimeType (73)
    on left: 64 65 66, on right: 61 88
Statement (74)
    on left: 67 68 69 70 71 72 73 74 75 76, on right: 70 71 77 78
StatementList (75)
    on left: 77 78, on right: 28 37 38 68 77
MethodCall (76)
    on left: 79, on right: 19 76
Index (77)
    on left: 80 81, on right: 23 81 82 85 88
IndexNoExpr (78)
    on left: 82 83, on right: 62 63
LeftValue (79)
    on left: 84 85 86 87 88 89, on right: 20 21 74 79 86


State 0

    0 $accept: . program $end

    K_CLASS  shift, and go to state 1

    program    go to state 2
    MainClass  go to state 3


State 1

   28 MainClass: K_CLASS . ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: MainClass . ClassDeclList

    $default  reduce using rule 30 (ClassDeclList)

    ClassDeclList  go to state 6


State 4

   28 MainClass: K_CLASS ID . LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: MainClass ClassDeclList .
   29 ClassDeclList: ClassDeclList . ClassDecl

    K_CLASS  shift, and go to state 8

    $default  reduce using rule 1 (program)

    ClassDecl  go to state 9


State 7

   28 MainClass: K_CLASS ID LEFT_BRACE . K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    K_PUBLIC  shift, and go to state 10


State 8

   31 ClassDecl: K_CLASS . ID Opt_Inheritance LEFT_BRACE VarDeclList MethodDeclList RIGHT_BRACE

    ID  shift, and go to state 11


State 9

   29 ClassDeclList: ClassDeclList ClassDecl .

    $default  reduce using rule 29 (ClassDeclList)


State 10

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC . K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    K_STATIC  shift, and go to state 12


State 11

   31 ClassDecl: K_CLASS ID . Opt_Inheritance LEFT_BRACE VarDeclList MethodDeclList RIGHT_BRACE

    K_EXTENDS  shift, and go to state 13

    $default  reduce using rule 40 (Opt_Inheritance)

    Opt_Inheritance  go to state 14


State 12

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC . K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    K_VOID  shift, and go to state 15


State 13

   39 Opt_Inheritance: K_EXTENDS . ID

    ID  shift, and go to state 16


State 14

   31 ClassDecl: K_CLASS ID Opt_Inheritance . LEFT_BRACE VarDeclList MethodDeclList RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 17


State 15

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID . K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    K_MAIN  shift, and go to state 18


State 16

   39 Opt_Inheritance: K_EXTENDS ID .

    $default  reduce using rule 39 (Opt_Inheritance)


State 17

   31 ClassDecl: K_CLASS ID Opt_Inheritance LEFT_BRACE . VarDeclList MethodDeclList RIGHT_BRACE

    $default  reduce using rule 33 (VarDeclList)

    VarDeclList  go to state 19


State 18

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN . LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    LEFT_PAR  shift, and go to state 20


State 19

   31 ClassDecl: K_CLASS ID Opt_Inheritance LEFT_BRACE VarDeclList . MethodDeclList RIGHT_BRACE
   32 VarDeclList: VarDeclList . VarDecl

    ID         shift, and go to state 21
    K_INT      shift, and go to state 22
    K_STRING   shift, and go to state 23
    K_BOOLEAN  shift, and go to state 24

    ID         [reduce using rule 36 (MethodDeclList)]
    K_INT      [reduce using rule 36 (MethodDeclList)]
    K_STRING   [reduce using rule 36 (MethodDeclList)]
    K_BOOLEAN  [reduce using rule 36 (MethodDeclList)]
    $default   reduce using rule 36 (MethodDeclList)

    MethodDeclList  go to state 25
    VarDecl         go to state 26
    Type            go to state 27
    PrimeType       go to state 28


State 20

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR . K_STRING LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    K_STRING  shift, and go to state 29


State 21

   42 VarDecl: ID . ID VarDeclTail SEMICOLON
   44        | ID . ID EQUAL Expression VarDeclTail SEMICOLON
   63 Type: ID . IndexNoExpr

    ID            shift, and go to state 30
    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 33


State 22

   64 PrimeType: K_INT .

    $default  reduce using rule 64 (PrimeType)


State 23

   65 PrimeType: K_STRING .

    $default  reduce using rule 65 (PrimeType)


State 24

   66 PrimeType: K_BOOLEAN .

    $default  reduce using rule 66 (PrimeType)


State 25

   31 ClassDecl: K_CLASS ID Opt_Inheritance LEFT_BRACE VarDeclList MethodDeclList . RIGHT_BRACE
   34 MethodDeclList: MethodDeclList . MethodDecl
   35               | MethodDeclList . MethodDeclWithPublic

    ID           shift, and go to state 34
    K_INT        shift, and go to state 22
    K_STRING     shift, and go to state 23
    K_BOOLEAN    shift, and go to state 24
    K_PUBLIC     shift, and go to state 35
    RIGHT_BRACE  shift, and go to state 36

    MethodDecl            go to state 37
    MethodDeclWithPublic  go to state 38
    Type                  go to state 39
    PrimeType             go to state 28


State 26

   32 VarDeclList: VarDeclList VarDecl .

    $default  reduce using rule 32 (VarDeclList)


State 27

   41 VarDecl: Type . ID VarDeclTail SEMICOLON
   43        | Type . ID EQUAL Expression VarDeclTail SEMICOLON
   62 Type: Type . IndexNoExpr

    ID            shift, and go to state 40
    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 41


State 28

   61 Type: PrimeType .

    $default  reduce using rule 61 (Type)


State 29

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING . LEFT_BRACKET RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    LEFT_BRACKET  shift, and go to state 42


State 30

   42 VarDecl: ID ID . VarDeclTail SEMICOLON
   44        | ID ID . EQUAL Expression VarDeclTail SEMICOLON

    EQUAL  shift, and go to state 43

    $default  reduce using rule 48 (VarDeclTail)

    VarDeclTail  go to state 44


State 31

   80 Index: LEFT_BRACKET . Expression RIGHT_BRACKET
   83 IndexNoExpr: LEFT_BRACKET . RIGHT_BRACKET

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    RIGHT_BRACKET    shift, and go to state 55
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 58
    MethodCall  go to state 59
    LeftValue   go to state 60


State 32

   81 Index: Index . LEFT_BRACKET Expression RIGHT_BRACKET
   82 IndexNoExpr: Index . LEFT_BRACKET RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 61


State 33

   63 Type: ID IndexNoExpr .

    $default  reduce using rule 63 (Type)


State 34

   63 Type: ID . IndexNoExpr

    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 33


State 35

   38 MethodDeclWithPublic: K_PUBLIC . Type ID LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE

    ID         shift, and go to state 34
    K_INT      shift, and go to state 22
    K_STRING   shift, and go to state 23
    K_BOOLEAN  shift, and go to state 24

    Type       go to state 62
    PrimeType  go to state 28


State 36

   31 ClassDecl: K_CLASS ID Opt_Inheritance LEFT_BRACE VarDeclList MethodDeclList RIGHT_BRACE .

    $default  reduce using rule 31 (ClassDecl)


State 37

   34 MethodDeclList: MethodDeclList MethodDecl .

    $default  reduce using rule 34 (MethodDeclList)


State 38

   35 MethodDeclList: MethodDeclList MethodDeclWithPublic .

    $default  reduce using rule 35 (MethodDeclList)


State 39

   37 MethodDecl: Type . ID LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE
   62 Type: Type . IndexNoExpr

    ID            shift, and go to state 63
    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 41


State 40

   41 VarDecl: Type ID . VarDeclTail SEMICOLON
   43        | Type ID . EQUAL Expression VarDeclTail SEMICOLON

    EQUAL  shift, and go to state 64

    $default  reduce using rule 48 (VarDeclTail)

    VarDeclTail  go to state 65


State 41

   62 Type: Type IndexNoExpr .

    $default  reduce using rule 62 (Type)


State 42

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET . RIGHT_BRACKET ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    RIGHT_BRACKET  shift, and go to state 66


State 43

   44 VarDecl: ID ID EQUAL . Expression VarDeclTail SEMICOLON

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 67
    MethodCall  go to state 59
    LeftValue   go to state 60


State 44

   42 VarDecl: ID ID VarDeclTail . SEMICOLON
   47 VarDeclTail: VarDeclTail . VarLongerDecl

    SEMICOLON  shift, and go to state 68
    COMMA      shift, and go to state 69

    VarLongerDecl  go to state 70


State 45

   25 Expression: STRING_LITERAL .

    $default  reduce using rule 25 (Expression)


State 46

   26 Expression: INTEGER_LITERAL .

    $default  reduce using rule 26 (Expression)


State 47

   84 LeftValue: ID .
   85          | ID . Index

    LEFT_BRACKET  shift, and go to state 71

    $default  reduce using rule 84 (LeftValue)

    Index  go to state 72


State 48

   15 Expression: PLUS . Expression

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 73
    MethodCall  go to state 59
    LeftValue   go to state 60


State 49

   16 Expression: MINUS . Expression

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 74
    MethodCall  go to state 59
    LeftValue   go to state 60


State 50

   22 Expression: K_NEW . ID LEFT_PAR RIGHT_PAR
   23           | K_NEW . Type Index
   87 LeftValue: K_NEW . ID LEFT_PAR RIGHT_PAR DOT ID
   88          | K_NEW . PrimeType Index

    ID         shift, and go to state 75
    K_INT      shift, and go to state 22
    K_STRING   shift, and go to state 23
    K_BOOLEAN  shift, and go to state 24

    Type       go to state 76
    PrimeType  go to state 77


State 51

   89 LeftValue: K_THIS . DOT ID

    DOT  shift, and go to state 78


State 52

   17 Expression: K_TRUE .

    $default  reduce using rule 17 (Expression)


State 53

   18 Expression: K_FALSE .

    $default  reduce using rule 18 (Expression)


State 54

   24 Expression: LEFT_PAR . Expression RIGHT_PAR

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 79
    MethodCall  go to state 59
    LeftValue   go to state 60


State 55

   83 IndexNoExpr: LEFT_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 83 (IndexNoExpr)


State 56

   14 Expression: EXC . Expression

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 80
    MethodCall  go to state 59
    LeftValue   go to state 60


State 57

   27 Expression: K_PARSEINT . LEFT_PAR Expression RIGHT_PAR

    LEFT_PAR  shift, and go to state 81


State 58

    2 Expression: Expression . PLUS Expression
    3           | Expression . MINUS Expression
    4           | Expression . D_AMPERSAND Expression
    5           | Expression . D_LINES Expression
    6           | Expression . SMALL_EQUAL Expression
    7           | Expression . LARGE_EQUAL Expression
    8           | Expression . D_EQUAL Expression
    9           | Expression . EXC_EQUAL Expression
   10           | Expression . STAR Expression
   11           | Expression . SLASH Expression
   12           | Expression . LESS Expression
   13           | Expression . GREATER Expression
   80 Index: LEFT_BRACKET Expression . RIGHT_BRACKET

    D_AMPERSAND    shift, and go to state 82
    D_LINES        shift, and go to state 83
    SMALL_EQUAL    shift, and go to state 84
    LARGE_EQUAL    shift, and go to state 85
    D_EQUAL        shift, and go to state 86
    EXC_EQUAL      shift, and go to state 87
    PLUS           shift, and go to state 88
    MINUS          shift, and go to state 89
    STAR           shift, and go to state 90
    SLASH          shift, and go to state 91
    RIGHT_BRACKET  shift, and go to state 92
    LESS           shift, and go to state 93
    GREATER        shift, and go to state 94


State 59

   19 Expression: MethodCall .

    $default  reduce using rule 19 (Expression)


State 60

   20 Expression: LeftValue .
   21           | LeftValue . DOT K_LENGTH
   79 MethodCall: LeftValue . LEFT_PAR Opt_ExpressionList RIGHT_PAR
   86 LeftValue: LeftValue . DOT ID

    LEFT_PAR  shift, and go to state 95
    DOT       shift, and go to state 96

    $default  reduce using rule 20 (Expression)


State 61

   81 Index: Index LEFT_BRACKET . Expression RIGHT_BRACKET
   82 IndexNoExpr: Index LEFT_BRACKET . RIGHT_BRACKET

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    RIGHT_BRACKET    shift, and go to state 97
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 98
    MethodCall  go to state 59
    LeftValue   go to state 60


State 62

   38 MethodDeclWithPublic: K_PUBLIC Type . ID LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE
   62 Type: Type . IndexNoExpr

    ID            shift, and go to state 99
    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 41


State 63

   37 MethodDecl: Type ID . LEFT_PAR Opt_FormalList RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE

    LEFT_PAR  shift, and go to state 100


State 64

   43 VarDecl: Type ID EQUAL . Expression VarDeclTail SEMICOLON

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 101
    MethodCall  go to state 59
    LeftValue   go to state 60


State 65

   41 VarDecl: Type ID VarDeclTail . SEMICOLON
   47 VarDeclTail: VarDeclTail . VarLongerDecl

    SEMICOLON  shift, and go to state 102
    COMMA      shift, and go to state 69

    VarLongerDecl  go to state 70


State 66

   28 MainClass: K_CLASS ID LEFT_BRACE K_PUBLIC K_STATIC K_VOID K_MAIN LEFT_PAR K_STRING LEFT_BRACKET RIGHT_BRACKET . ID RIGHT_PAR LEFT_BRACE StatementList RIGHT_BRACE RIGHT_BRACE

    ID  shift, and go to state 103


State 67

    2 Expression: Expression . PLUS Expression
    3           | Expression . MINUS Expression
    4           | Expression . D_AMPERSAND Expression
    5           | Expression . D_LINES Expression
    6           | Expression . SMALL_EQUAL Expression
    7           | Expression . LARGE_EQUAL Expression
    8           | Expression . D_EQUAL Expression
    9           | Expression . EXC_EQUAL Expression
   10           | Expression . STAR Expression
   11           | Expression . SLASH Expression
   12           | Expression . LESS Expression
   13           | Expression . GREATER Expression
   44 VarDecl: ID ID EQUAL Expression . VarDeclTail SEMICOLON

    D_AMPERSAND  shift, and go to state 82
    D_LINES      shift, and go to state 83
    SMALL_EQUAL  shift, and go to state 84
    LARGE_EQUAL  shift, and go to state 85
    D_EQUAL      shift, and go to state 86
    EXC_EQUAL    shift, and go to state 87
    PLUS         shift, and go to state 88
    MINUS        shift, and go to state 89
    STAR         shift, and go to state 90
    SLASH        shift, and go to state 91
    LESS         shift, and go to state 93
    GREATER      shift, and go to state 94

    $default  reduce using rule 48 (VarDeclTail)

    VarDeclTail  go to state 104


State 68

   42 VarDecl: ID ID VarDeclTail SEMICOLON .

    $default  reduce using rule 42 (VarDecl)


State 69

   45 VarLongerDecl: COMMA . ID EQUAL Expression
   46              | COMMA . ID

    ID  shift, and go to state 105


State 70

   47 VarDeclTail: VarDeclTail VarLongerDecl .

    $default  reduce using rule 47 (VarDeclTail)


State 71

   80 Index: LEFT_BRACKET . Expression RIGHT_BRACKET

    STRING_LITERAL   shift, and go to state 45
    INTEGER_LITERAL  shift, and go to state 46
    ID               shift, and go to state 47
    PLUS             shift, and go to state 48
    MINUS            shift, and go to state 49
    K_NEW            shift, and go to state 50
    K_THIS           shift, and go to state 51
    K_TRUE           shift, and go to state 52
    K_FALSE          shift, and go to state 53
    LEFT_PAR         shift, and go to state 54
    EXC              shift, and go to state 56
    K_PARSEINT       shift, and go to state 57

    Expression  go to state 58
    MethodCall  go to state 59
    LeftValue   go to state 60


State 72

   81 Index: Index . LEFT_BRACKET Expression RIGHT_BRACKET
   85 LeftValue: ID Index .

    LEFT_BRACKET  shift, and go to state 106

    $default  reduce using rule 85 (LeftValue)


State 73

    2 Expression: Expression . PLUS Expression
    3           | Expression . MINUS Expression
    4           | Expression . D_AMPERSAND Expression
    5           | Expression . D_LINES Expression
    6           | Expression . SMALL_EQUAL Expression
    7           | Expression . LARGE_EQUAL Expression
    8           | Expression . D_EQUAL Expression
    9           | Expression . EXC_EQUAL Expression
   10           | Expression . STAR Expression
   11           | Expression . SLASH Expression
   12           | Expression . LESS Expression
   13           | Expression . GREATER Expression
   15           | PLUS Expression .

    STAR   shift, and go to state 90
    SLASH  shift, and go to state 91

    $default  reduce using rule 15 (Expression)


State 74

    2 Expression: Expression . PLUS Expression
    3           | Expression . MINUS Expression
    4           | Expression . D_AMPERSAND Expression
    5           | Expression . D_LINES Expression
    6           | Expression . SMALL_EQUAL Expression
    7           | Expression . LARGE_EQUAL Expression
    8           | Expression . D_EQUAL Expression
    9           | Expression . EXC_EQUAL Expression
   10           | Expression . STAR Expression
   11           | Expression . SLASH Expression
   12           | Expression . LESS Expression
   13           | Expression . GREATER Expression
   16           | MINUS Expression .

    STAR   shift, and go to state 90
    SLASH  shift, and go to state 91

    $default  reduce using rule 16 (Expression)


State 75

   22 Expression: K_NEW ID . LEFT_PAR RIGHT_PAR
   63 Type: ID . IndexNoExpr
   87 LeftValue: K_NEW ID . LEFT_PAR RIGHT_PAR DOT ID

    LEFT_PAR      shift, and go to state 107
    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 32
    IndexNoExpr  go to state 33


State 76

   23 Expression: K_NEW Type . Index
   62 Type: Type . IndexNoExpr

    LEFT_BRACKET  shift, and go to state 31

    Index        go to state 108
    IndexNoExpr  go to state 41


State 77

   61 Type: PrimeType .
   88 LeftValue: K_NEW PrimeType . Index

    LEFT_BRACKET  shift, and go to state 71

    LEFT_BRACKET  [reduce using rule 61 (Type)]

    Index  go to state 109


State 78

   89 LeftValue: K_THIS DOT . ID

    ID  shift, and go to state 110


State 79

    2 Expression: Expression . PLUS Expression
    3           | Expression . MINUS Expression
    4           | Expression . D_AMPERSAND Expression
    5           | Expression . D_LINES Expression
    6           | Expression . SMALL_EQUAL Expression
    7           | Expression . LARGE_EQUAL Expression
    8           | Expression . D_EQUAL Expression
    9           | Expression . EXC_EQUAL Expression
   10           | Expression . STAR Expression
   11           | Expression . SLASH Expression
   12           | Expression . LESS Expression
   13           | Expression . GREATER Expression
   24           | LEFT_PAR Expression . RIGHT_PAR
